# openproxy

./: .dockerignore  .env.example  .gitignore  9ROUTER_SYNC_MASTER_PLAN.md  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  PLAN.md  README.md  build.rs  docker-compose.yml  install.ps1  install.sh  libopenproxy_test.rlib  openproxy-bug-report.md  plan.txt  workflow_branches.js
.agents/skills/openproxy/: SKILL.md
.agents/skills/testing-combo-fallback/: SKILL.md
.beads/: config.yaml  issues.jsonl
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
.omo/run-continuation/: ses_10d03de2dffeNE5P3ZNnJ9wWaY.json  ses_10d0a9547ffe214iAMdGbMXwRt.json  ses_10d0c55ceffep5Mo1RqrC8SH45.json  ses_10d13d904ffeTvxAmtn7kvYPWL.json  ses_10d1438d8ffeZihh0iqeySN0Af.json  ses_157ea9e7bffew2Xp5thgAxxcNk.json  ses_1584966faffe1gTDzxywV0Szok.json  ses_162845bb9ffeb28KT0Vq2MMBwA.json
.opencode/: opencode.db  opencode.json
docs/: MASTER_PLAN_9ROUTER_PARITY.md  checklist-clis.md  checklist-providers.md  parity-9router.md  residual-gaps.md
docs/integrations/: looper-integration-test.md  omniroute-learnings.md
scripts/: parity-smoke.sh  stage-npm-binaries.mjs
scripts/sync/: README.md  normalize-sources.mjs
shell-completions/: openproxy.bash  openproxy.fish  openproxy.zsh
specs/: 2026-06-21-149-test-looper-integration-test.md
src/: lib.rs  main.rs  payload_rules.rs
src/cli/: apply.rs  auth.rs  chat.rs  combo.rs  config.rs  db.rs  doctor.rs  key_ext.rs  logs.rs  media.rs  mitm.rs  mod.rs  models.rs  output.rs  pool_ext.rs  provider_ext.rs  provider_models.rs  provider_node.rs  provider_oauth.rs  quota.rs  runtime.rs  schema.rs  server.rs  settings.rs  sync.rs  tool.rs  translator.rs  tunnel_rt.rs  usage.rs
src/cli/tests/: cli_tool_tests.rs  mod.rs
src/core/: a2a.rs  circuit_breaker.rs  mod.rs  tunnel.rs
src/core/account_fallback/: mod.rs  tests.rs
src/core/auth/: cline_auth.rs  credential_manager.rs  machine_id.rs  mod.rs
src/core/cache/: mod.rs
src/core/chat/: mod.rs
src/core/combo/: auto_combo.rs  fusion.rs  hedging.rs  mod.rs  shadow.rs
src/core/config/: app_constants.rs  codex_instructions.rs  default_thinking_signature.rs  error_config.rs  google_tts_languages.rs  kiro_constants.rs  mod.rs  ollama_models.rs  provider_models.rs  runtime_config.rs  tts_models.rs
src/core/dns/: mod.rs
src/core/eval/: mod.rs
src/core/executor/: antigravity.rs  api_key.rs  azure.rs  client_pool.rs  codebuddy_cn.rs  codex.rs  commandcode.rs  cursor.rs  default.rs  gemini_cli.rs  github.rs  grok_cli.rs  grok_web.rs  iflow.rs  kimchi.rs  kiro.rs  mimo_free.rs  mod.rs  ollama.rs  opencode.rs  opencode_go.rs  project_id_cache.rs  provider.rs  qoder.rs  qwen.rs  strip_unsupported.rs  vertex.rs  xai.rs
src/core/guardrails/: mod.rs
src/core/mcp/: bridge.rs  mod.rs  plugins.rs  server.rs  smart_filter.rs
src/core/media/: error.rs  mod.rs
src/core/mitm/: capture.rs  cert.rs  mod.rs  server.rs
src/core/model/: catalog.rs  mod.rs  provider_catalog.json
src/core/proxy/: mod.rs
src/core/rtk/: apply_filter.rs  autodetect.rs  constants.rs  headroom.rs  mod.rs  smartcrusher.rs  system_inject.rs  tests.rs
src/core/tls/: mod.rs
src/core/translator/: caveman.rs  mod.rs  ponytail.rs  registry.rs  response_transform.rs  tests.rs
src/core/usage/: mod.rs  pricing.rs  quota_fetcher.rs  request_logger.rs  tracker.rs
src/core/utils/: bypass_handler.rs  claude_cloaking.rs  claude_header_cache.rs  client_detector.rs  cursor_checksum.rs  error.rs  kiro_session_replay.rs  mod.rs  project_id_cache.rs  reasoning_content_injector.rs  session_manager.rs  stream_flags.rs  thinking_suffix.rs  tool_deduper.rs
src/db/: backups.rs  crypto.rs  mod.rs  watcher.rs
src/db/sqlite/: export.rs  import.rs  migrations.rs  mod.rs  schema.rs
src/oauth/: antigravity.rs  gemini_cli.rs  kiro.rs  mod.rs  openai.rs  providers.rs  qoder.rs  test_helpers.rs  tests.rs  token_refresh.rs  xai.rs
src/oauth/refresh/: codex.rs  mod.rs  openai.rs
src/oauth/tests/: mod.rs  oauth_url_tests.rs  token_refresh_tests.rs
src/server/: mod.rs  request_logger.rs  state.rs  usage_live.rs  usage_stream.rs
src/server/api/: a2a.rs  admin_items.rs  auth.rs  chat.rs  chat_search.rs  cli_tools.rs  cloud_credentials.rs  compat.rs  cors.rs  db_backups.rs  guard.rs  headroom.rs  locale.rs  mcp.rs  mcp_server.rs  media.rs  media_providers.rs  mitm_config.rs  mod.rs  models_alias.rs  oauth.rs  observability.rs  pricing.rs  provider_connection_test.rs  provider_model_tests.rs  provider_models.rs  provider_validate.rs  providers.rs  shutdown.rs  (+11 more)
src/types/: mod.rs
tests/: README.md  admin_item_routes.rs  api_auth_and_models.rs  api_usage_routes.rs  cargo_deps.rs  chat_completions.rs  cli_m4_robot_envelopes.rs  cli_m5_robot_envelopes.rs  cli_m6_robot_envelopes.rs  cli_tool_native_settings_api.rs  cloud_credentials_api.rs  codex_executor.rs  combo.rs  combos_api.rs  cowork_settings_api.rs  cursor_executor.rs  db_and_models.rs  db_backups_api.rs  db_sqlite_e2e.rs  db_watcher.rs  executor_pool_behavior.rs  init_api.rs  kiro_executor.rs  mitm_listener_e2e.rs  oauth_auth_code_compat_api.rs  oauth_codex_proxy_api.rs  oauth_cursor_auto_import_api.rs  oauth_cursor_import_api.rs  oauth_gitlab_auth_code_compat_api.rs  oauth_gitlab_pat_api.rs  oauth_iflow_cookie_api.rs  oauth_kiro_auto_import_api.rs  oauth_kiro_device_code_api.rs  oauth_kiro_import_api.rs  oauth_kiro_social_authorize_api.rs  oauth_kiro_social_exchange_api.rs  oauth_non_pkce_auth_code_compat_api.rs  oidc_sso_api.rs  package.json  payload_rules_api.rs  (+13 more)
tests/common/: mod.rs
tests/parity/: README.md
tests/unit/: antigravity-cache.test.js
web/: astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
web/i18n/: README.ja-JP.md  README.vi.md  README.zh-CN.md
web/scripts/: run-source-stack.mjs
(+395 files in other folders)
