[package]
name = "openproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# HTTP client (hot path)
hyper = { version = "1.5", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27", features = ["http2"] }

# HTTP client (complex - OAuth, proxy)
reqwest = { version = "0.12", features = ["json", "cookies", "multipart", "gzip", "brotli", "socks", "stream"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# JSON - simd-json for parsing, serde_json for serialization
simd-json = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
toml = "0.8"

# JWT auth
jsonwebtoken = "9"
bcrypt = "0.15"

# Streaming / bytes
bytes = "1"
futures-util = "0.3"
http-body-util = "0.1"
tokio-util = { version = "0.7", features = ["io", "net", "codec"] }

# Async runtime utilities
async-trait = "0.1"
dashmap = "6"
once_cell = "1"
regex = "1"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Database
arc-swap = "1"

# Crypto
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
sha1 = "0.10"
sha256 = "1.6"

# URL / query
url = "2"
urlencoding = "2"
serde_urlencoded = "0.7"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Environment / config
dotenvy = "0.15"

# Error handling
thiserror = "2"
anyhow = "1"

# AWS Signature for Kiro
aws-credential-types = "1"
aws-sigv4 = "1.4"

# Random
rand = "0.8"

# FNV hash for cache keys
fnv = "1.0"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }

# Async stream
async-stream = "0.3"

# RSA for JWT signing
rsa = "0.9"
time = "0.3"

# Client identity
whoami = "1"

# CLI: file system watcher for hot-reload of db.json from CLI writes
notify = "7"
# CLI: cross-platform user config directory resolution
directories = "5"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json", "yaml"] }

[[bin]]
name = "openproxy"
path = "src/main.rs"
